test/spec_vectors/conversions/fail/module_25.wat
(module (func (result f64) (f64.reinterpret_i64 (i32.const 0))))